--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,17 @@ body {
   line-height: 1.6;
   overflow-x: hidden;
 }
+.main {
+  background: url('img/main-background.jpg') no-repeat center center;
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
+}
 
 /* ===== Шапка ===== */
 .header {
@@ -165,18 +176,6 @@ nav a:hover {
               var(--bg-url) center/cover no-repeat fixed;
   z-index: -1;
 }
-
-.section-with-bg {
-  width: 100vw;
-  position: relative;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
-  background-size: cover;
-  background-position: center;
-}
-
 /* ===== Адаптивность ===== */
 @media (max-width: 768px) {
   .header {
